src/test/ui/existential_types/generic_duplicate_param_use3.stderr
error: defining existential type use restricts existential type by using the generic parameter `T` twice
  --> $DIR/generic_duplicate_param_use3.rs:10:1
   |
LL | / fn one<T: Debug>(t: T) -> Two<T, T> {
LL | |
LL | |     t
LL | | }
   | |_^

error: concrete type's generic parameters differ from previous defining use
  --> $DIR/generic_duplicate_param_use3.rs:19:1
   |
LL | / fn three<T, U: Debug>(_: T, u: U) -> Two<T, U> {
LL | |
LL | |     u
LL | | }
   | |_^ expected [`T`], got [`U`]
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use3.rs:15:1
   |
LL | / fn two<T: Debug, U>(t: T, _: U) -> Two<T, U> {
LL | |     t
LL | | }
   | |_^

error: aborting due to 2 previous errors

